--- a/style.css
+++ b/style.css
@@ -23,9 +23,11 @@ h1{
 #advantages{
     margin-top: -50px;
     background-color: lightcoral;
+    height: 200px;
 }
 .list-advantages{
     list-style: none;
+    
 }
 .img-advantages{
     width: 50px;
@@ -36,6 +38,7 @@ li{
     margin: 20px; 
     display: inline-block;
     text-align: center;
+    margin-top: 30px;
     
 }
 h3{
@@ -54,11 +57,11 @@ h3{
     background-color: lightpink;
 }
 h2{
-    margin-top: 20px;
+   
     color: aliceblue;
     font-size: 50px;
     font-family: "Dancing Script";
-    
+    padding-top: 30px;
     text-align: center;
 }
 .about-text{
